Fix on firefox dotted line when on focus in the navbar

--- a/CssFiles/main.css
+++ b/CssFiles/main.css
@@ -280,3 +280,11 @@ Responsive part
 	}
 
 }
+
+/*--------------------------------------------
+    Fix firefox dotted line when on focus
+--------------------------------------------*/
+
+button::-moz-focus-inner {
+	border: 0;
+}
